# simkel

./: .gitignore  2026.code-workspace  CHANGES.txt  MANIFEST.in  README.md  development.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 7d8554667a6d_initial_simkel_migration.py  b36a33765b7e_peneyesuaian_models.py
docs/: 01_uc.puml  02_01_activity_login.puml  02_03_activity_approval.puml  02_03_activity_permohonan_dl.puml  03_02_sequence_permohonan.puml  03_04_sequence_report.puml  05_00_table_struktur.md  06_00_form_design.md  SIMKEL.md
docs/puml/: 00_00_base.puml  00_00_class_diagram.puml  01_00_uc.puml  01_01_permohonan.puml  01_02_approval_uc.puml  01_02_uc_auth.puml  02_02_activity_permohonan.puml  02_03_activity_approval.puml  02_04_activity_report.puml  03_01_sequence_login.puml  03_02_sequence_permohonan.puml  03_03_sequence_approval.puml  04_00_class_diagram.puml  05_00_table_struktur.md
docs/screen/: 01_login.html  02_dashboard.html  03_dashboard_manager.html  03_dashboard_pengunjung.html  03_dashboard_petugas.html  04_input_permohonan.html  profile.html
simkel/: __init__.py
simkel/models/: __init__.py  alur_permohonan.py  grouplayanan.py  grouplevel.py  jenisdokumen.py  jenispermohonan.py  logsapproval.py  partner_docs.py  penetapan.py  permohonan.py  permohonan_field.py  permohonan_fields.py
simkel/scripts/: initializedb.py
simkel/scripts/data/: group_permissions.csv  groups.csv  (+4 more)
simkel/views/: __init__.py  approval.py  dashboard.py  group_layanan.py  grouplevel.py  jenisdokumen.py  jenispermohonan.py  permohonan.py  permohonan_field.py
(+4 files in other folders)
